New classes, new files, new everything

--- a/torcs/torcs/src/libs/learning/README
+++ b/torcs/torcs/src/libs/learning/README
@@ -14,7 +14,11 @@ good tradeoff between good learning and low structural complexity.
 One should be aware that low-complexity structures are easier to
 learn. Using larger structures makes learning more difficult and
 slower, but can potentially result in better solutions. Using
-extremely large structures makes learning impractical.
+extremely large structures makes learning impractical. [Note: Large
+structures can still be learned quite well if there is some kind of
+pre-determined relationship between parts of the structure. However
+the current library does not provide any way to incorporate such prior
+knowledge.]
 
 1.3. Types of algorithms
 
@@ -22,15 +26,27 @@ Most of the algorithms provided are reinforcement learning. For an
 overview of the reinforcement learning look at Sutton's and Barto's
 great book: http://www-anw.cs.umass.edu/~rich/book/the-book.html
 
-
 2. A detailed look at the classes
 
-policy.h and policy.cpp provide classes for learning adaptive
-policies. Currently the only type of algorithm used is
-Sarsa(lambda). For details look at the class header file and the
-implementation. The book offers a detailed explanation of the
-algorithm. I have had good results with Sarsa in the following
-experiment.
+List.cpp provides a basic list class for use with ANN.
+
+ANN provides a function approximation framework, sometimes referred to
+as a neural network. However the class is more general than that.
+
+policy.h and policy.cpp provide classes for learning adaptive policies
+in discrete spaces. Current support exists for Q-learning, Sarsa and
+E-learning (a slightly modified version of SARSA). Action selection
+mechanisms are e-greedy, softmax, pursuit and an experimantal
+bayes-optimal mechanism.
+
+ann_policy.h and ann_policy.cpp provide a class for learning adaptive
+policies with function approximation. This can potentially be more
+powerful, but slightly more difficult to design for.
+
+For details look at the class header file and the
+implementation. Doxygen documentation can be generated. The book
+offers a detailed explanation of the algorithm. I have had good
+results with Sarsa in the following experiment.
 
 2.1. Experiments with Sarsa
 
@@ -40,16 +56,19 @@ discrete states. Thus, each 10 segments of the track corresponded to
 the same state. The agent could take two actions, the first
 corresponding to the INSANE and the second to the NORMAL policy. 
 The agent considered a new action every time it entered a new
-state (once every 10 segments). The reward given at each time step was
+state (once every 25 segments). The reward given at each time step was
 -1/(0.1+0.1*current_speed). 
 
 I tried the robot berniw9 with the following parameters: 
 	alpha = 0.1 or 0.01
-	gamma = 0.99
-	lambda = 0.99
+	lambda = 0.8
 	randomness = 0.1 or 0.01
 	softmax = false
 	init_eval = 0.0
+
+The value of gamma depended on the dt, the time between successive
+actions, according to the formula gamma = exp(-b*dt). b was chosen to
+be .5, so that gamma would equal .95 for a dt of 0.1.
 
 I ran the robot for 10000Km in e-track-3 with the two different
 settings of alpha and randomness and I managed to get a minimum time
@@ -58,36 +77,18 @@ and only converges towards the end of the trial. The figure
 berniw_results.ps shows a smoothed version (over 28 laps) of the time
 of the robot for each parameter set, where this can be seen clearly.
 
-Other values of lambda should work equally well, since this only
+Other values of lambda should work more or less as well, since this only
 affects the learning and not the quality of the final solution.
 
-I would not reduce gamma below 0.7, however, as then the robot would
-only try to increase time.
-
-A more detailed state vector might theoretically give a better
-performance, but one should keep in mind that for more states a larger
-gamma value should be used. This is because the value that the agent
-maximises is R_t=\sum_{k=0}^{\infty} \gamma^k r_t. So if \gamma=0.9
-and we use 1 state per 10 segments, then the importance of the reward
-that will be received after 100 meters is 0.9^{10} = 0.34868. However,
-if we use 1 state per segment then the importance of the reward after
-100 meters will be 0.9^{100}=.00002656, which is pretty
-insignificant. So one should adjust gamma to be around 0.99 to have
-the same effect.
-
-
+A more detailed state vector might give a better asymptotic
+performance, but short-term performance can be worse.
 
 3. Future work
 
-A couple of extra RL algorithms are going to be provided. Some classes
-for function approximation will be added, for the case of RL in
-continuous state environments, most probably a simple neural net,
-taken from one of my other projects. However, RL in continuous
-*action* environments is still pretty much a current research topic
-and algorithms are not known to work very efficiently.
+Reinforcement learning is generally a model-free control method. Some model-based optimal control methods might be added soon.
 
 If authors of robots require other standard machine learning
 algorithms, they can contact me at dimitrak@idiap.ch for discussion
-and possible implementation. 
+and possible implementation.
 
 Christos Dimitrakakis, 2004
