--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -89,6 +89,8 @@ Changes since 1.2.3
 - Improvments in simuv2 (Christos, Bernhard)
 - Updated porsche-gt3rs (Olaf Sassnick, Bernhard).
 - Fixed weird (new introduced, post 1.2.3, car.cpp) bug in simuv2 (Bernhard).
+- Applied patches from Debian maintainer (Rudy Godoy, Bernhard).
+
 
 
 Changes since 1.2.2
@@ -174,7 +176,6 @@ TODO for 1.2.4 (estimate: early July)
 - Fix XSLT/DTD for viewing results (Report by Eugen)
 - Fix (windows) trackgen.
 - Fix strdup (for FreeBSD).
-- Apply useful patches from debian maintainer.
 - Update clkdtm if ready (Speedy).
 - (Improve collision).
 - OpenAL (plib causes too much trouble on Windows).
@@ -210,6 +211,10 @@ TODO for 1.2.4 (estimate: early July)
 - downsize grey-tracks.rgb texture.
 - in long races car-to-car collisions fail somehow sometimes -> investigate
 - pit wall collision
+- before/at release: credits update
+  Olaf Sassnick -> porsche improvment -> the_penguin@gmx.at
+  Christophe Macours -> sound samples -> ???
+  Charalampos Alexopoulos -> track editor -> babis@rege.org
 
 
 TODO for 1.2.5
