--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -110,6 +110,12 @@ Changes since 1.2.3
 - Added OpenGL configuration screen (Bernhard).
 - Fixed inconsistency of texture loaders, "_nmm" is now obsolete, use "_n"
   (Bernhard).
+- Improved Makefiles of alpine-1, g-track-3 and ole-road-1 (Bernhard).
+- New sound architecture/implementation with a plib and OpenAL backend
+  (Christos).
+- Changes in sound menu for new sound implementation, added volume (Christos).
+
+
 
 
 
@@ -196,7 +202,6 @@ TODO for 1.2.4 (estimate: early July)
 - Fix (windows) trackgen.
 - Fix strdup (for FreeBSD).
 - (Improve collision).
-- OpenAL (plib causes too much trouble on Windows).
 - Hunting lost open filehandles if any left.
 - Bugfixes and cleanup.
 - Rework g-track-1 (format version 4, add pits on straight, update artwork).
@@ -222,6 +227,7 @@ TODO for 1.2.4 (estimate: early July)
   at random times].
 - in long races car-to-car collisions fail somehow sometimes -> investigate
 - pit wall collision
+- align widgets in sound config screen.
 - update faq (->AMD64, remove outdated stuff).
 - before/at release: credits update
   Olaf Sassnick -> porsche improvment -> the_penguin@gmx.at
